WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204019
SWServerWorker in redundant state do not need to process messages from the context process
https://bugs.webkit.org/show_bug.cgi?id=204019
Summary
SWServerWorker in redundant state do not need to process messages from the co...
youenn fablet
Reported
2019-11-08 13:35:41 PST
SWServerWorker in redundant state do not need to process messages from the context process
Attachments
Patch
(7.55 KB, patch)
2019-11-08 14:01 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-11-08 14:01:16 PST
Created
attachment 383161
[details]
Patch
WebKit Commit Bot
Comment 2
2019-11-08 19:02:12 PST
The commit-queue encountered the following flaky tests while processing
attachment 383161
[details]
: imported/w3c/web-platform-tests/html/semantics/forms/form-submission-0/form-double-submit-3.html
bug 203609
(author:
cdumez@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2019-11-08 19:03:06 PST
Comment on
attachment 383161
[details]
Patch Clearing flags on attachment: 383161 Committed
r252300
: <
https://trac.webkit.org/changeset/252300
>
WebKit Commit Bot
Comment 4
2019-11-08 19:03:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-11-11 17:05:14 PST
<
rdar://problem/57099568
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug